# MiniExt4

./: .gitignore  CMakeLists.txt  README.md  build.sh  linker.ld
docs/: DIRECTORY_EXPLANATION.md  EXT4_INITIALIZATION.md  FIX_DUMPE2FS_ERROR.md  FS_STRUCTURES.md  SUPER_BLOCK_SIMPLIFICATION.md  USED_STRUCTURES_SIMPLE_EXT4.md  VFS_REFACTORING.md
drivers/: ata.cpp  rtc.cpp
drivers/base/: driver.cpp
drivers/input/: handlers.cpp  keyboard.cpp  mouse.cpp
fs/: dcache.c  dir.c  inode.c  namei.c  open.c  super.c  vfs_inode.cpp  vfs_super.cpp
fs/ext4/: balloc.c  dir.c  file.c  ialloc.c  inode.c  inode.cpp  io.c  io.cpp  super.c  super.cpp
include/drivers/: ata.h  driver.h  handlers.h  keyboard.h  mouse.h  rtc.h
include/fs/: dentry.h  file.h  fs_types.h  inode.h  operations.h  stat.h  super.h  super_type.h  writeback.h
include/fs/ext4/: ext4.h
include/kernel/: interrupts.h  kcli.h  multitasking.h  syscalls.h  tasks.h  time.h
include/lib/: console.h  port.h  printf.h  shell.h  syscall.h
include/linux/: dirent.h  fs.h  list.h  string.h  types.h
include/mm/: gdt.h
include/usr/: shell.h
init/: interruptstubs.s  kernel.cpp  loader.s
kernel/: kcli.cpp  syscall.cpp  time.cpp
kernel/interrupts/: interrupts.cpp
kernel/sched/: multitasking.cpp  tasks.cpp
lib/: console.cpp  port.cpp  printf.cpp  shell.cpp  string.cpp  syscall.cpp
mm/: gdt.cpp
scripts/: create_test_image.sh
usr/: shell.cpp
